--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,3 +18,22 @@ mat-option.divider {
 mat-option.divider + * {
     border-top: 1px solid gray;
 }
+
+.no-scrollbar {
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
+
+.fadein {
+    mask: linear-gradient(90deg, #0000 0, #000 8px);
+}
+
+.fadeout {
+    mask: linear-gradient(90deg, #000 calc(100% - 8px), #0000 100%);
+}
+
+.fadein.fadeout {
+    mask: linear-gradient(90deg, #0000 0, #000 8px, #000 calc(100% - 8px), #0000 100%);
+}
